--- a/bai3/bai3.css
+++ b/bai3/bai3.css
@@ -3,8 +3,12 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+  background-color: #111;
+}
 .gallery{
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     padding: 0 4px;
     width: auto;
@@ -13,6 +17,7 @@
 .column {
     float: left;
     width: 33.33%;
+    height: auto;
     padding: 0 4px;
     position: relative;
 }
@@ -20,7 +25,13 @@
     margin-top: 8px;
     object-fit: cover;
     vertical-align: middle;
+    border-radius: 8px;
+    border: none;
     width: 100%;
+}
+.column img:hover{
+  border: 2px solid #ffffff;
+  box-shadow: 0 0 5px #ffffff;
 }
 .column .item-desc{
     color: #ffffff;
@@ -33,11 +44,19 @@
     left: 10px;
 }
 /* Style the buttons */
+.category-select{
+  margin: 10px 0 5px 10px;
+  display: flex;
+}
 .btn {
     border: none;
     outline: none;
     padding: 12px 16px;
+    margin: 0 3px;
     background-color: #f1f1f1;
+    font-size: 18px;
+    font-style: italic;
+    border-radius: 8px;
     cursor: pointer;
   }
   
@@ -49,7 +68,9 @@
     background-color: #666;
     color: white;
   }
-
+.btn a{
+  text-decoration: none;
+}
 /*  */
 .blocker {
     position: fixed;
@@ -69,6 +90,7 @@
   }
 .form-container {
     display: flex;
+    flex-direction: column;
     max-width: 1100px;
     width: 90%;
     height: 90%;
@@ -77,7 +99,7 @@
     left: 50%;
     top: 50%;
     overflow-y: scroll;
-    padding: 30px;
+    padding: 10px;
     border: 2px solid #ffffff;
     border-radius: 10px;
     
@@ -91,15 +113,13 @@
     flex-direction: row;
 }
 .right-form{
-    width: 50%;
-    position: relative;
-    right: 0;
+  width: 70%;
 }
   /*==================== Food Title ====================*/
   .more-detail-title{
     position: relative;
     font-weight: 400;
-    font-size: 45px;
+    font-size: 40px;
     text-shadow: 0 0 5px #ffffff;
   }
   /* Line */
@@ -123,10 +143,30 @@
     width: 90%;
     object-fit: cover;
     overflow: hidden;
-    border-radius: 15px;
+    border-radius: 10px;
   }
   /* recipe category */
   .more-detail-category span {
     display: inline-block;
     margin: 0 5px;
+  }
+  @media screen and (max-width: 1000px) {
+    .column .item-desc{
+      font-size: 15px;
+    }
+    .main-more-detail{
+      width: 100%;
+      flex-direction: column;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap !important;
+    }
+    .right-form{
+      width: 100%;
+    }
+    .more-detail-img-big{
+      display: flex;
+      justify-content: center;
+  }
+
   }
