--- a/testCF-01/CSS/app.css
+++ b/testCF-01/CSS/app.css
@@ -87,7 +87,10 @@ label{
   font-weight: 700;
 }
 .form-error{
-  margin-top: 5px !important;
+  height: 16px;
+  font-size: 16px;
+  margin-top: 2px !important;
   margin-left: 35px;
+  margin-bottom: 2px;
   color: red;
 }
